// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should not render the last name 1`] = `
<body>
  .c0 {
  margin-bottom: 40px;
}

.c2 {
  font-size: 6vw;
  color: #fff;
  font-weight: 700;
  text-transform: lowercase;
}

.c1 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: none;
}

.c1:focus {
  border-bottom: 1px solid #363636;
  outline: none;
}

.c3 {
  font-size: 25px;
}

@media (min-width:760px) {
  .c2 {
    font-size: 24px;
  }
}

<div>
    <header
      class="c0"
    >
      <a
        class="c1"
        href="/"
      >
        <span
          class="c2"
        >
          John
          <span
            class="c3"
          >
            ⚡
          </span>
        </span>
      </a>
    </header>
  </div>
</body>
`;

exports[`<Header /> should render properly 1`] = `
.c0 {
  margin-bottom: 40px;
}

.c2 {
  font-size: 15vw;
  color: #fff;
  font-weight: 700;
  text-transform: lowercase;
}

.c4 {
  color: #363636;
}

.c1 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: none;
}

.c1:focus {
  border-bottom: 1px solid #363636;
  outline: none;
}

.c3 {
  font-size: 25px;
}

@media (min-width:760px) {
  .c2 {
    font-size: 80px;
  }
}

<body>
  <div>
    <header
      class="c0"
    >
      <a
        class="c1"
        href="/"
      >
        <span
          class="c2"
        >
          John
          <span
            class="c3"
          >
            ⚡
          </span>
          <span
            class="c4"
            data-testid="header-lastname"
          >
            Doe
          </span>
        </span>
      </a>
    </header>
  </div>
</body>
`;
